[CW23]
* Fix: ModuleTest: allow to test the responses to Register/UnregisterAppInterface requests.

[CW20]
+ The user can now send brand new MakeMeFeelGood request. Used to test that the response is GenericResponse.
+ ShowConstantTBT dialog (v2): add turn icon parameter.
- SetMediaClockTimer dialog (v1): remove CLEAR update mode.
* Speak dialog: set all TTS Chunks' types to TEXT by default.

[CW17]
* Alert dialog (v1): hide Line 3 and Soft Buttons fields.
* AddCommand dialog (v1): hide icon-related fields.
+ XML testing: <test> and request tags now support the 'pause' attribute, which inserts a delay after completing the test or sending the request, respectively. Its value is the delay in milliseconds. If the attribute is missing, no delay is inserted.

[CW16]
+ CreateInteractionChoiceSet dialog: add support for Image fields.
* PutFile dialog: don't allow to send files larger than 4 MB.
* SyncProxyAndroid SDK: prevent crashing of the application when trying to send a request with large bulk data.

[CW15]
* Fix (protocol v1): don't send initialization requests when switching to already registered app from another screen (on HMI).
* Fix an incorrect app name when the phone is using Russian locale.

[CW14]
+ Add an option to the startup screen: "Set app icon after registration".
* PerformInteraction dialog: allow to select multiple choice set IDs.
* Show dialog: add extra fields.
+ Allow to send test requests when the app is not registered.
+ Add GUI for PerformInteraction message.

[CW12]
* UpdateTurnList dialog: change the way how Turn items are parsed from the GUI.
+ Add an option to disable screen locking while doing XML tests. It can be toggled in the options menu, "Lock screen while testing" item. The change will NOT affect currently running tests, if any.
* Fix: remove all the commands that were added to the submenu when it's deleted.