@@ -1,4 +1,5 @@
-[CW23]
+[CW24]
++ ModuleTest: add invalidJSON attribute to request tags to produce invalid JSON sent to the core.
 * Fix: ModuleTest: allow to test the responses to Register/UnregisterAppInterface requests.
 
 [CW20]
